--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- DaisyUi and Tailwind cdn -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- connecting to CSS -->
+    <link rel="stylesheet" href="styles/style.css">
     <title>B9A5 Smart Ticketing</title>
 </head>
+
 <body>
-    
+    <header>
+
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
+    <script src="JavaScript/utility.js"></script>
+    <script src="JavaScript/simple.js"></script>
 </body>
+
 </html>
